
[package]
name = "bac-bot"
version = "0.1.0"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
ureq = "2.0"
ratelimit = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"